horizontal scroll, logo bug fixed

--- a/src/pages/book.css
+++ b/src/pages/book.css
@@ -1,3 +1,10 @@
+html,
+body {
+  overflow-x: hidden;
+}
+body {
+  position: relative;
+}
 .email-sign-in {
   background: linear-gradient(
       180deg,
