--- a/src/pages/explore.css
+++ b/src/pages/explore.css
@@ -2,6 +2,12 @@
   margin: 0;
   padding: 0;
   background: #c1c5c4;
+  position: relative;
+}
+
+html,
+body {
+  overflow-x: hidden;
 }
 
 .destinations {
