--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,3 +1,11 @@
+html,
+body {
+  overflow-x: hidden;
+}
+body {
+  position: relative;
+}
+
 .header-wrapper {
   overflow-x: hidden;
   width: 100vw;
