--- a/src/pages/signup.css
+++ b/src/pages/signup.css
@@ -1,3 +1,10 @@
+html,
+body {
+  overflow-x: hidden;
+}
+body {
+  position: relative;
+}
 .email {
   background: linear-gradient(
       180deg,
